--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.application.name = Product-REST-API
 server.port=2020
-spring.datasource.url=jdbc:mysql://localhost:3306/srijan_db?useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/project?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=dhama@1357
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.hibernate.ddl-auto=create
