created pdf with dynamic fields

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,13 @@ spring.datasource.username=root
 spring.datasource.password=Bhawana@2001
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto=update
+
+
+#-----------PDF GENERATION PROPERTIES----------
+
+pdfDir=D:/Orders/
+reportFileName=Order-Details
+reportFileNameDateFormat=dd_MMMM_yyyy
+localDateFormat="dd MMMM yyyy HH:mm:ss"
+table_noOfColumns=6
+table.columnNames=Order Id,Product Name,Product Id,Order Title,Order Name,Order Date
