--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,19 +1,22 @@
 spring.application.name = Product-REST-API
 server.port=2020
-spring.datasource.url=jdbc:mysql://localhost:3306/project?useSSL=false
-spring.datasource.username=root
-spring.datasource.password=dhama@1357
+#spring.datasource.url=jdbc:mysql://localhost:3306/project?useSSL=false
+spring.datasource.url=jdbc:mysql://${DB_HOST:localhost}:${DB_PORT:3306}/${DB_NAME:project}?useSSL=false&allowPublicKeyRetrieval=true
+
+#spring.datasource.username=root
+spring.datasource.username=${DB_USERNAME:root}
+#spring.datasource.password=dhama@1357
+spring.datasource.password=${DB_PASSWORD:dhama@1357}
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
 
 
+#External Configuration for Orders
 
 pdfDir=/Users/shubham.dhama/Desktop/orderPdf/
 reportFileName=Order-Report
 reportFileNameDateFormat=dd_MMMM_yyyy
 localDateFormat="dd MMMM yyyy HH:mm:ss"
-#logoImgPath=D:/img_JTO_logo.jpg
-#logoImgScale=50,50
-#currencySymbol=$
-table_noOfColumns=5
-table.columnNames=Order Id,Product Name,Order Title,Order Name,Order Date
+table_noOfColumns=6
+table.columnNames=Order Id,Product Name,Product Id,Order Title,Order Name,Order Date
